# AVFileParse

./: .gitignore  README.md
example/SDL2/: CMakeLists.txt  main.cpp
example/ffmpeg/: CMakeLists.txt
example/jni/app/: build.gradle
example/jni/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
example/jni/app/src/main/java/com/gongluck/jni/: JClass.java  MainActivity.java
media/: gx.aac  gx.pcm
